--- a/src/docker-compose.yml
+++ b/src/docker-compose.yml
@@ -9,6 +9,8 @@ services:
         POSTGRES_USER: postgres
         POSTGRES_PASSWORD: postgres
         POSTGRES_DB: postgres
+    volumes:
+      - ./database/init:/docker-entrypoint-initdb.d
   api:
     build:
         context: ./api
