add nginx instead of http-server

--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,3 +1,4 @@
+# Stage 1: Development
 FROM oven/bun:latest as dev
 
 WORKDIR /app
@@ -11,17 +12,27 @@ COPY . /app
 
 CMD ["bun", "run", "dev"]
 
-FROM oven/bun:latest as prod
+# Stage 2: Build for production
+FROM oven/bun:latest as builder
 
 WORKDIR /app
 
 COPY package.json /app
 COPY bun.lockb /app
 
-RUN bun install -g http-server
 RUN bun install --silent --production
 
 COPY . /app
 RUN bun run build
 
-CMD ["http-server", "dist"]
+# Stage 3: Production environment with Nginx
+FROM nginx:alpine
+
+# Copy static assets from builder stage
+COPY --from=builder /app/dist /usr/share/nginx/html
+
+# Expose port 80
+EXPOSE 80
+
+# Start Nginx server
+CMD ["nginx", "-g", "daemon off;"]
