--- a/frontend/.dockerignore
+++ b/frontend/.dockerignore
@@ -7,6 +7,7 @@
 README.md
 Dockerfile
 LICENSE
+.vscode
 
 # Artifacts that will be built during image creation.
 # This should contain all files created during `yarn build`.
