--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,38 +1,38 @@
 version: '3'
 
 services:
-  # database:
-  #   image: postgres:16
-  #   ports:
-  #     - '5432:5432'
-  #   environment:
-  #     POSTGRES_USER: postgres
-  #     POSTGRES_PASSWORD: postgres
-  #     POSTGRES_DB: postgres
-  #   volumes:
-  #     - ./database/init:/docker-entrypoint-initdb.d
-  #   networks:
-  #     - backend_db
+  database:
+    image: postgres:16
+    ports:
+      - '5432:5432'
+    environment:
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: postgres
+      POSTGRES_DB: postgres
+    volumes:
+      - ./database/init:/docker-entrypoint-initdb.d
+    networks:
+      - backend_db
 
-  # api:
-  #   build:
-  #     context: ./api
-  #     #        dockerfile: debug.Dockerfile
-  #     dockerfile: Dockerfile
-  #   ports:
-  #     - '8080:8080'
-  #     - '40000:40000'
-  #   depends_on:
-  #     - database
-  #   security_opt:
-  #     - 'seccomp:unconfined'
-  #   cap_add:
-  #     - SYS_PTRACE
-  #   command: /dlv --headless --listen=:40000 --api-version=2 exec /server
-  #   environment:
-  #     DATABASE_URL: postgres://postgres:postgres@database:5432/postgres
-  #   networks:
-  #     - backend_db
+  api:
+    build:
+      context: ./api
+      dockerfile: Dockerfile
+    ports:
+      - '8080:8080'
+    depends_on:
+      - database
+    security_opt:
+      - 'seccomp:unconfined'
+    cap_add:
+      - SYS_PTRACE
+    # command: /dlv --headless --listen=:40000 --api-version=2 exec /server
+    volumes:
+      - .:/app
+    environment:
+      DATABASE_URL: postgres://postgres:postgres@database:5432/postgres
+    networks:
+      - backend_db
 
   frontend:
     build:
@@ -48,5 +48,6 @@ services:
     volumes:
       - ./frontend:/app
       - /app/node_modules
-# networks:
-#   backend_db:
+
+networks:
+  backend_db:
