--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,9 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@vueuse/core": "^10.7.2",
+    "@vueuse/integrations": "^10.7.2",
+    "axios": "^1.6.5",
     "flowbite": "^2.2.1",
     "pinia": "^2.1.7",
     "vue": "^3.4.13",
