using custom docker file instead of mount

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,9 @@ version: '3'
 
 services:
   database:
-    image: postgres:16
+    build:
+      context: ./database
+      dockerfile: Dockerfile
     ports:
       - '5432:5432'
     environment:
