--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,9 +2,7 @@ version: '3'
 
 services:
   database:
-    build:
-      context: ./database
-      dockerfile: Dockerfile
+    image: postgres:16
     ports:
       - '5432:5432'
     environment:
