--- a/.github/workflows/publish-ghcr.yaml
+++ b/.github/workflows/publish-ghcr.yaml
@@ -42,7 +42,7 @@ jobs:
           context: ./api
           file: ./api/Dockerfile
           push: true
-          tags: ${{ steps.meta.outputs.tags }}
+          tags: event_calendar_api:latest
           labels: ${{ steps.meta.outputs.labels }}
           
   build_and_push_frontend:
@@ -71,6 +71,6 @@ jobs:
           context: ./frontend
           file: ./frontend/Dockerfile
           push: true
-          tags: ${{ steps.meta.outputs.tags }}
+          tags: event_calendar_frontend:latest
           labels: ${{ steps.meta.outputs.labels }}
 
