--- a/kubernetes/db-secrets.yaml
+++ b/kubernetes/db-secrets.yaml
@@ -1,6 +1,6 @@
 # needs 'kubectl apply -f https://k8s.io/examples/pods/inject/secret.yaml '
 apiVersion: v1
-kind: secret
+kind: Secret
 metadata:
   name: db-secrets
 data:
