--- a/kubernetes/frontend-service.yaml
+++ b/kubernetes/frontend-service.yaml
@@ -3,8 +3,8 @@ kind: Service
 metadata:
   creationTimestamp: null
   labels:
-    io.kompose.service: frontend
-  name: frontend
+    component: frontend
+  name: frontend-service
 spec:
   ports:
     - name: "frontend-svc-port"
@@ -12,6 +12,6 @@ spec:
       port: 5173
       targetPort: frontend-svc
   selector:
-    io.kompose.service: frontend
+    component: frontend
 status:
   loadBalancer: {}
