--- a/kubernetes/db-secrets.yaml
+++ b/kubernetes/db-secrets.yaml
@@ -3,6 +3,8 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: db-secrets
+  labels:
+    component: db
 data:
  userName: cG9zdGdyZXM=
  password: cG9zdGdyZXM=
