--- a/kubernetes/database-data-persistentVolumeClaim.yaml
+++ b/kubernetes/database-data-persistentVolumeClaim.yaml
@@ -1,10 +1,9 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  creationTimestamp: null
   labels:
-    io.kompose.service: frontend-claim0
-  name: frontend-claim0
+    component: database
+  name: database-pvc-claim0
 spec:
   accessModes:
     - ReadWriteOnce
