--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,20 +15,17 @@ services:
   api:
     build:
       context: ./api
-      #        dockerfile: debug.Dockerfile
       dockerfile: Dockerfile
     ports:
       - '8080:8080'
-      - '40000:40000'
     depends_on:
       - database
     security_opt:
       - 'seccomp:unconfined'
     cap_add:
       - SYS_PTRACE
-    command: /dlv --headless --listen=:40000 --api-version=2 exec /server
     environment:
-      DATABASE_URL: postgres://postgres:postgres@database:5432/postgres
+      DB_HOST: database
     networks:
       - backend_db
 
