--- a/k8_deployments/api-deployment.yaml
+++ b/k8_deployments/api-deployment.yaml
@@ -1,50 +1,51 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  creationTimestamp: null
   labels:
-    io.kompose.service: api
+    component: api
   name: api
 spec:
   replicas: 1
   selector:
     matchLabels:
-      io.kompose.service: api
+      component: api
   strategy: {}
   template:
     metadata:
-      creationTimestamp: null
       labels:
         io.kompose.network/software-containerization-backend-db: "true"
-        io.kompose.service: api
+        component: api
     spec:
       containers:
-        - args:
-            - /dlv
-            - --headless
-            - --listen=:40000
-            - --api-version=2
-            - exec
-            - /server
-          env:
-            - name: DATABASE_URL
-              value: postgres://postgres:postgres@database:5432/postgres
+        - env:
+          - name: DB_HOST
+            value: database
+          - name: DB_NAME
+            value: Events
+          - name: DB_PASSWORD
+            valueFrom:
+              secretKeyRef:
+                name: db-secrets
+                key: password
+          - name: DB_USER
+            valueFrom:
+              secretKeyRef:
+                name: db-secrets
+                key: userName
+
           image: ghcr.io/noleu/event_calendar_api
           name: api
           ports:
             - containerPort: 8080
               hostPort: 8080
               protocol: TCP
-            - containerPort: 40000
-              hostPort: 40000
-              protocol: TCP
           resources: 
             requests:
               cpu: 1
-              memory: 0.5gb
+              memory: 512Mi
             limits:
               cpu: 2
-              memory: 3gb
+              memory: 1024Mi
           securityContext:
             capabilities:
               add:
