--- a/k8_deployments/frontend-deployment.yaml
+++ b/k8_deployments/frontend-deployment.yaml
@@ -3,21 +3,19 @@ kind: Deployment
 metadata:
   creationTimestamp: null
   labels:
-    io.kompose.service: frontend
+    component: frontend
   name: frontend
 spec:
   replicas: 1
   selector:
     matchLabels:
-      io.kompose.service: frontend
+      component: frontend
   strategy:
     type: Recreate
   template:
     metadata:
-      creationTimestamp: null
       labels:
-        io.kompose.network/software-containerization-default: "true"
-        io.kompose.service: frontend
+        component: frontend
     spec:
       containers:
         - env:
