fixed environment name & referenced cluster ip

--- a/k8_deployments/api-deployment.yaml
+++ b/k8_deployments/api-deployment.yaml
@@ -18,8 +18,8 @@ spec:
     spec:
       containers:
         - env:
-          - name: DB_HOST
-            value: database
+          - name: DB_HOST_NAME
+            value: database-cluster-ip-service
           - name: DB_NAME
             value: Events
           - name: DB_PASSWORD
