--- a/k8_deployments/frontend-deployment.yaml
+++ b/k8_deployments/frontend-deployment.yaml
@@ -22,7 +22,7 @@ spec:
             - name: NODE_ENV
               value: development
             - name: VITE_API_URL
-              value: http://localhost:8080
+              value: api-cluster-ip-service
           image: ghcr.io/noleu/event_calendar_frontend
           name: event-frontend
           ports:
