--- a/k8s/frontend-deployment.yaml
+++ b/k8s/frontend-deployment.yaml
@@ -51,8 +51,20 @@ metadata:
 spec:
   selector:
     component: frontend
+  type: ClusterIP
   ports:
     - port: 80
       targetPort: 80
-      nodePort: 30080
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: k8-load-balancer-service
+spec:
+  selector:
+    component: frontend
   type: LoadBalancer
+  ports:
+    - port: 80
+      targetPort: 80
+      nodePort: 30000
