--- a/k8s/frontend-deployment.yaml
+++ b/k8s/frontend-deployment.yaml
@@ -1,24 +1,22 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  creationTimestamp: null
-  labels:
-    component: frontend
   name: frontend
+  namespace: default
 spec:
   replicas: 1
   selector:
     matchLabels:
-      component: frontend
-  strategy:
-    type: Recreate
+      app: frontend
   template:
     metadata:
       labels:
-        component: frontend
+        app: frontend
     spec:
       containers:
-        - env:
+        - name: event-frontend
+          image: ghcr.io/noleu/event_calendar_frontend
+          env:
             - name: NODE_ENV
               valueFrom:
                 configMapKeyRef:
@@ -29,8 +27,7 @@ spec:
                 configMapKeyRef:
                   name: frontend-configmap
                   key: api_url
-          image: ghcr.io/noleu/event_calendar_frontend
-          name: event-frontend
+
           ports:
             - containerPort: 80
           resources: 
@@ -48,10 +45,11 @@ apiVersion: v1
 kind: Service
 metadata:
   name: frontend-cluster-ip-service
+  namespace: default
 spec:
-  selector:
-    component: frontend
   type: ClusterIP
   ports:
     - port: 80
       targetPort: 80
+  selector:
+    app: frontend
