--- a/.github/workflows/publish-ghcr.yaml
+++ b/.github/workflows/publish-ghcr.yaml
@@ -13,6 +13,8 @@ on:
   push:
     branches: 
       - main
+      - feat/k8
+      - fix/docker-multiplatform-build
 
 jobs:
   build_and_push_backend:
