--- a/.github/workflows/publish-ghcr.yaml
+++ b/.github/workflows/publish-ghcr.yaml
@@ -45,7 +45,16 @@ jobs:
           push: true
           tags: ghcr.io/noleu/event_calendar_api:latest
           labels: ${{ steps.meta.outputs.labels }}
-          platforms: linux/amd64,linux/arm64
+
+      - name: Build and push Docker image
+        uses: docker/build-push-action@v3
+        with:
+          context: ./api
+          file: ./api/Dockerfile
+          push: true
+          tags: ghcr.io/noleu/event_calendar_api:arm64
+          labels: ${{ steps.meta.outputs.labels }}
+          platforms: linux/arm64
           
   build_and_push_frontend:
     name: Push Docker image for frontend to Github Container Registry
@@ -75,5 +84,14 @@ jobs:
           push: true
           tags: ghcr.io/noleu/event_calendar_frontend:latest
           labels: ${{ steps.meta.outputs.labels }}
-          platforms: linux/amd64,linux/arm64
+
+      - name: Build and push Docker image
+        uses: docker/build-push-action@v3
+        with:
+          context: ./frontend
+          file: ./frontend/Dockerfile
+          push: true
+          tags: ghcr.io/noleu/event_calendar_frontend:arm64
+          labels: ${{ steps.meta.outputs.labels }}
+          platforms: linux/arm64
           
