--- a/k8_deployments/api-deployment.yaml
+++ b/k8_deployments/api-deployment.yaml
@@ -33,7 +33,7 @@ spec:
                 name: db-secrets
                 key: userName
 
-          image: ghcr.io/noleu/event_calendar_api
+          image: rawalsaadi/soft_containerization-api:latest
           name: api
           ports:
             - containerPort: 8080
@@ -41,11 +41,11 @@ spec:
               protocol: TCP
           resources: 
             requests:
+              cpu: 500m
+              memory: 256Mi
+            limits:
               cpu: 1
               memory: 512Mi
-            limits:
-              cpu: 2
-              memory: 1024Mi
           securityContext:
             capabilities:
               add:
