--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -33,6 +33,7 @@ services:
       DATABASE_URL: postgres://postgres:postgres@database:5432/postgres
     networks:
       - backend_db
+      - frontend-api
 
   frontend:
     build:
@@ -43,11 +44,14 @@ services:
     ports:
       - '5173:5173'
     environment:
-      VITE_API_URL: http://localhost:8080
+      VITE_API_URL: http://localhost:8080/api
       NODE_ENV: development
     volumes:
       - ./frontend:/app
       - /app/node_modules
+    networks:
+      - frontend-api
 
 networks:
   backend_db:
+  frontend-api:
