--- a/network_policies/allow-frontend-to-api-networkpolicy.yaml
+++ b/network_policies/allow-frontend-to-api-networkpolicy.yaml
@@ -12,7 +12,7 @@ spec:
     - from:
         - podSelector:
             matchLabels:
-              component: frontend
+              app: frontend
       ports:
         - protocol: TCP
           port: 8080
