--- a/network_policies/deny-external-db-access-networkpolicy.yaml
+++ b/network_policies/deny-external-db-access-networkpolicy.yaml
@@ -5,7 +5,7 @@ metadata:
 spec:
   podSelector:
     matchLabels:
-      component: db
+      component: database
   policyTypes:
     - Ingress
   ingress: []
