--- a/k8s/backend-developer-role.yaml
+++ b/k8s/backend-developer-role.yaml
@@ -1,5 +1,5 @@
 apiVersion: rbac.authorization.k8s.io/v1
-kind: ClusterRole
+kind: Role
 metadata:
   name: backend-developer
 rules:
@@ -23,7 +23,7 @@ metadata:
   name: backend-developer-binding
 roleRef:
     apiGroup: rbac.authorization.k8s.io
-    kind: ClusterRole
+    kind: Role
     name: backend-developer
 subjects:
 - kind: Group
