added resources to same namespace

--- a/k8s/db-data-persistentVolumeClaim.yaml
+++ b/k8s/db-data-persistentVolumeClaim.yaml
@@ -4,6 +4,7 @@ metadata:
   labels:
     component: database
   name: db-pvc-claim0
+  namespace: event-app
 spec:
   accessModes:
     - ReadWriteOnce
