--- a/k8s/api-deployment.yaml
+++ b/k8s/api-deployment.yaml
@@ -4,6 +4,7 @@ metadata:
   labels:
     component: api
   name: api
+  namespace: event-app
 spec:
   replicas: 1
   selector:
@@ -63,6 +64,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: api-cluster-ip-service
+  namespace: event-app
 spec:
   selector:
     component: api
