--- a/k8s/db-configmap.yaml
+++ b/k8s/db-configmap.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: db-configmap
+  namespace: event-app
 data:
-  db_host: database-cluster-ip-service
-  db_name: Events
+  db_host: "database-cluster-ip-service"
+  db_name: "Events"
