--- a/k8s/db-secrets.yaml
+++ b/k8s/db-secrets.yaml
@@ -5,6 +5,7 @@ metadata:
   name: db-secrets
   labels:
     component: db
+  namespace: event-app
 data:
  username: cG9zdGdyZXM=
  password: cG9zdGdyZXM=
