--- a/k8s/frontend-configmap.yaml
+++ b/k8s/frontend-configmap.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: frontend-configmap
+  namespace: event-app
 data:
-  api_url: api-cluster-ip-service
-  node_env: production
+  api_url: "api-cluster-ip-service"
+  node_env: "production"
