--- a/k8s/myeventsappchart/templates/db-deployment.yaml
+++ b/k8s/myeventsappchart/templates/db-deployment.yaml
@@ -1,22 +1,22 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: {{ include "myeventsappchart.fullname" . }}-database
+  name: {{ include "myapp.fullname" . }}-database
   labels:
     component: database
-  {{- include "myeventsappchart.labels" . | nindent 4 }}
+  {{- include "myapp.labels" . | nindent 4 }}
 spec:
   replicas: {{ .Values.database.replicas }}
   selector:
     matchLabels:
       component: database
-    {{- include "myeventsappchart.selectorLabels" . | nindent 6 }}
+    {{- include "myapp.selectorLabels" . | nindent 6 }}
   template:
     metadata:
       labels:
         component: database
         io.kompose.network/software-containerization-backend-db: "true"
-      {{- include "myeventsappchart.selectorLabels" . | nindent 8 }}
+      {{- include "myapp.selectorLabels" . | nindent 8 }}
     spec:
       containers:
       - env:
@@ -24,17 +24,17 @@ spec:
           valueFrom:
             configMapKeyRef:
               key: db_name
-              name: {{ include "myeventsappchart.fullname" . }}-db-configmap
+              name: {{ include "myapp.fullname" . }}-db-configmap
         - name: POSTGRES_PASSWORD
           valueFrom:
             secretKeyRef:
               key: password
-              name: {{ include "myeventsappchart.fullname" . }}-db-secrets
+              name: {{ include "myapp.fullname" . }}-db-secrets
         - name: POSTGRES_USER
           valueFrom:
             secretKeyRef:
               key: username
-              name: {{ include "myeventsappchart.fullname" . }}-db-secrets
+              name: {{ include "myapp.fullname" . }}-db-secrets
         - name: KUBERNETES_CLUSTER_DOMAIN
           value: {{ quote .Values.kubernetesClusterDomain }}
         image: {{ .Values.database.database.image.repository }}:{{ .Values.database.database.image.tag
@@ -53,18 +53,18 @@ spec:
       volumes:
       - name: db-data-storage
         persistentVolumeClaim:
-          claimName: {{ include "myeventsappchart.fullname" . }}-db-pvc-claim0
+          claimName: {{ include "myapp.fullname" . }}-db-pvc-claim0
 ---
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ include "myeventsappchart.fullname" . }}-database-cluster-ip-service
+  name: {{ include "myapp.fullname" . }}-database-cluster-ip-service
   labels:
-  {{- include "myeventsappchart.labels" . | nindent 4 }}
+  {{- include "myapp.labels" . | nindent 4 }}
 spec:
   type: {{ .Values.databaseClusterIpService.type }}
   selector:
     component: database
-  {{- include "myeventsappchart.selectorLabels" . | nindent 4 }}
+  {{- include "myapp.selectorLabels" . | nindent 4 }}
   ports:
 	{{- .Values.databaseClusterIpService.ports | toYaml | nindent 2 -}}
