--- a/k8s/myeventsappchart/templates/db-secrets.yaml
+++ b/k8s/myeventsappchart/templates/db-secrets.yaml
@@ -1,10 +1,10 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: {{ include "myeventsappchart.fullname" . }}-db-secrets
+  name: {{ include "myapp.fullname" . }}-db-secrets
   labels:
     component: db
-  {{- include "myeventsappchart.labels" . | nindent 4 }}
+  {{- include "myapp.labels" . | nindent 4 }}
 data:
   password: {{ required "dbSecrets.password is required" .Values.dbSecrets.password
     | b64enc | quote }}
