--- a/k8s/myeventsappchart/templates/db-data-persistentVolumeClaim.yaml
+++ b/k8s/myeventsappchart/templates/db-data-persistentVolumeClaim.yaml
@@ -1,10 +1,10 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: {{ include "myeventsappchart.fullname" . }}-db-pvc-claim0
+  name: {{ include "myapp.fullname" . }}-db-pvc-claim0
   labels:
     component: database
-  {{- include "myeventsappchart.labels" . | nindent 4 }}
+  {{- include "myapp.labels" . | nindent 4 }}
 spec:
   accessModes:
   - ReadWriteOnce
