--- a/k8s/myeventsappchart/templates/frontend-configmap.yaml
+++ b/k8s/myeventsappchart/templates/frontend-configmap.yaml
@@ -1,9 +1,9 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: {{ include "myeventsappchart.fullname" . }}-frontend-configmap
+  name: {{ include "myapp.fullname" . }}-frontend-configmap
   labels:
-  {{- include "myeventsappchart.labels" . | nindent 4 }}
+  {{- include "myapp.labels" . | nindent 4 }}
 data:
   api_url: {{ .Values.frontendConfigmap.apiUrl | quote }}
   node_env: {{ .Values.frontendConfigmap.nodeEnv | quote }}
