--- a/k8s/myeventsappchart/templates/ingress.yaml
+++ b/k8s/myeventsappchart/templates/ingress.yaml
@@ -1,9 +1,9 @@
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: {{ include "myeventsappchart.fullname" . }}-ingress-service
+  name: {{ include "myapp.fullname" . }}-ingress-service
   labels:
-  {{- include "myeventsappchart.labels" . | nindent 4 }}
+  {{- include "myapp.labels" . | nindent 4 }}
   annotations:
     cert-manager.io/cluster-issuer: letsencrypt
 spec:
@@ -14,7 +14,7 @@ spec:
       paths:
       - backend:
           service:
-            name: '{{ include "myeventsappchart.fullname" . }}-frontend-cluster-ip-service'
+            name: '{{ include "myapp.fullname" . }}-frontend-cluster-ip-service'
             port:
               number: 80
         path: /
