--- a/.github/workflows/publish-ghcr.yaml
+++ b/.github/workflows/publish-ghcr.yaml
@@ -14,7 +14,7 @@ on:
     branches: 
       - main
       - feat/k8
-      - fix/docker-multiplatform-build
+      - helm-fix
 
 jobs:
   build_and_push_backend:
