switched back to default namespace

--- a/k8s/db-data-persistentVolumeClaim.yaml
+++ b/k8s/db-data-persistentVolumeClaim.yaml
@@ -4,7 +4,7 @@ metadata:
   labels:
     component: database
   name: db-pvc-claim0
-  namespace: event-app
+  namespace: default
 spec:
   accessModes:
     - ReadWriteOnce
