--- a/k8s/ingress.yaml
+++ b/k8s/ingress.yaml
@@ -2,7 +2,7 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: ingress-service
-  namespace: event-app
+  namespace: default
   annotations:
     cert-manager.io/cluster-issuer: letsencrypt
 spec:
