--- a/k8s/api-deployment.yaml
+++ b/k8s/api-deployment.yaml
@@ -4,7 +4,7 @@ metadata:
   labels:
     component: api
   name: api
-  namespace: event-app
+  namespace: default
 spec:
   replicas: 1
   selector:
@@ -64,7 +64,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: api-cluster-ip-service
-  namespace: event-app
+  namespace: default
 spec:
   selector:
     component: api
