--- a/k8s/app-adminstrator-role.yaml
+++ b/k8s/app-adminstrator-role.yaml
@@ -2,7 +2,7 @@ apiVersion: rbac.authorization.k8s.io/v1
 kind: Role
 metadata:
   name: app-adminstrator-role
-  namespace: event-app
+  namespace: default
 rules:
   - apiGroups: [""]
     resources: ["*"]
@@ -14,7 +14,7 @@ apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
 metadata:
   name: app-adminstrator-role-binding
-  namespace: event-app
+  namespace: default
 roleRef:
     apiGroup: rbac.authorization.k8s.io
     kind: Role
