--- a/k8s/backend-developer-role.yaml
+++ b/k8s/backend-developer-role.yaml
@@ -2,7 +2,7 @@ apiVersion: rbac.authorization.k8s.io/v1
 kind: Role
 metadata:
   name: backend-developer
-  namespace: event-app
+  namespace: default
 rules:
 - apiGroups: [""]
   resources: ["deployments", "services", "pods", "secrets", "configmaps"]
