--- a/k8s/db-configmap.yaml
+++ b/k8s/db-configmap.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: db-configmap
-  namespace: event-app
+  namespace: default
 data:
   db_host: "database-cluster-ip-service"
   db_name: "Events"
