--- a/k8s/db-deployment.yaml
+++ b/k8s/db-deployment.yaml
@@ -5,7 +5,7 @@ metadata:
   labels:
     component: database
   name: database
-  namespace: event-app
+  namespace: default
 spec:
   replicas: 1
   selector:
@@ -67,7 +67,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: database-cluster-ip-service
-  namespace: event-app
+  namespace: default
 spec:
   selector:
     component: database
