--- a/k8s/letsencrypt-issuer.yaml
+++ b/k8s/letsencrypt-issuer.yaml
@@ -2,7 +2,7 @@ apiVersion: cert-manager.io/v1
 kind: ClusterIssuer
 metadata:
  name: letsencrypt
- namespace: event-app
+ namespace: default
 spec:
  acme:
     email:
