using rolebindings for IAM service accounts

--- a/k8s/frontend-developer-role.yaml
+++ b/k8s/frontend-developer-role.yaml
@@ -24,6 +24,6 @@ roleRef:
     kind: Role
     name: frontend-developer
 subjects:
-- kind: Group
-  name: event-app-frontend-developer
+- kind: User
+  name: cluster-user-2@software-containerization-2024.iam.gserviceaccount.com
   apiGroup: rbac.authorization.k8s.io
