--- a/k8s/backend-developer-role.yaml
+++ b/k8s/backend-developer-role.yaml
@@ -19,7 +19,7 @@ rules:
 ---
 
 apiVersion: rbac.authorization.k8s.io/v1
-kind: ClusterRoleBinding
+kind: RoleBinding
 metadata:
   name: backend-developer-binding
 roleRef:
@@ -27,6 +27,6 @@ roleRef:
     kind: Role
     name: backend-developer
 subjects:
-- kind: Group
-  name: event-app-backend-developer
+- kind: User
+  name: cluster-user-1@software-containerization-2024.iam.gserviceaccount.com
   apiGroup: rbac.authorization.k8s.io
