replace letsencrypt with ManagedCertificate, add ingress classname

--- a/k8s/api-deployment.yaml
+++ b/k8s/api-deployment.yaml
@@ -43,7 +43,7 @@ spec:
           name: api
           ports:
             - containerPort: 8080
-              hostPort: 8080
+              # hostPort: 8080
               protocol: TCP
           resources: 
             requests:
