--- a/k8s/ingress.yaml
+++ b/k8s/ingress.yaml
@@ -3,10 +3,11 @@ kind: Ingress
 metadata:
   name: ingress-service
   namespace: default
-  annotations:
-    cert-manager.io/cluster-issuer: letsencrypt
+    cert-manager.io/cluster-issuer: managed-cert
+    nginx.ingress.kubernetes.io/rewrite-target: /$2
+    nginx.ingress.kubernetes.io/ssl-redirect: "false"
 spec:
-  ingressClassName: public
+  ingressClassName: nginx
   rules:
   - host: myeventsapp.com
     http:
