--- a/k8s/myeventsappchart/templates/ingress.yaml
+++ b/k8s/myeventsappchart/templates/ingress.yaml
@@ -5,9 +5,11 @@ metadata:
   labels:
   {{- include "myapp.labels" . | nindent 4 }}
   annotations:
-    cert-manager.io/cluster-issuer: letsencrypt
+    cert-manager.io/cluster-issuer: managed-cert
+    nginx.ingress.kubernetes.io/rewrite-target: /$2
+    nginx.ingress.kubernetes.io/ssl-redirect: "false"
 spec:
-  ingressClassName: public
+  ingressClassName: nginx
   rules:
   - host: myeventsapp.com
     http:
