rbac deployment to gcp, replaced letsencrypt with managedCertificate, removed host port

--- a/k8s/db-deployment.yaml
+++ b/k8s/db-deployment.yaml
@@ -28,7 +28,7 @@ spec:
           image: postgres:16
           ports:
             - containerPort: 5432
-              hostPort: 5432
+              # hostPort: 5432
               protocol: TCP
 
           env:
