--- a/k8s/api-deployment.yaml
+++ b/k8s/api-deployment.yaml
@@ -44,7 +44,7 @@ spec:
           name: api
           ports:
             - containerPort: 8080
-              hostPort: 8080
+              # hostPort: 8080
               protocol: TCP
           resources: 
             requests:
