made api groups explicit

--- a/k8s/backend-developer-role.yaml
+++ b/k8s/backend-developer-role.yaml
@@ -4,7 +4,7 @@ metadata:
   name: backend-developer
   namespace: default
 rules:
-- apiGroups: [""]
+- apiGroups: ["/","extensions", "apps"]
   resources: ["deployments", "services", "pods", "secrets", "configmaps"]
   resourceNames:
     - api-cluster-ip-service
