--- a/k8s/app-developer-role.yaml
+++ b/k8s/app-developer-role.yaml
@@ -4,7 +4,7 @@ metadata:
   name: app-developer-role
   namespace: default
 rules:
-  - apiGroups: ["/","extensions", "apps"]
+  - apiGroups: ["","/","extensions", "apps"]
     resources: ["deployments", "services", "pods", "configmaps", "pods/log", "pods/exec" ]
     verbs: ["*"]
 
