--- a/k8s/infrastructure-admin-role.yaml
+++ b/k8s/infrastructure-admin-role.yaml
@@ -1,8 +1,7 @@
 apiVersion: rbac.authorization.k8s.io/v1
 kind: Role
 metadata:
-#  name: frontend-developer
-  name: infrastructure-admin
+  name: infrastructure-admin-role
   namespace: default
 rules:
   - apiGroups: ["", "/", "extensions", "apps", "networking.k8s.io", "networking.gke.io"]
@@ -35,10 +34,9 @@ roleRef:
     name: infrastructure-admin
 subjects:
 - kind: ServiceAccount
-  name: test-sa
-#  name: cluster-user-2@software-containerization-2024.iam.gserviceaccount.com
-#  apiGroup: rbac.authorization.k8s.io
+  name: infrastructure-admin
   apiGroup: ""
+
 ---
 
 apiVersion: v1
