--- a/k8s/api-deployment.yaml
+++ b/k8s/api-deployment.yaml
@@ -39,7 +39,7 @@ spec:
                 name: db-secrets
                 key: username
 
-          image: https://ghcr.io/noleu/event_calendar_api
+          image: ghcr.io/noleu/event_calendar_api
           name: api
           ports:
             - containerPort: 8080
