--- a/k8s/frontend-deployment.yaml
+++ b/k8s/frontend-deployment.yaml
@@ -15,7 +15,7 @@ spec:
     spec:
       containers:
         - name: event-frontend
-          image: https://ghcr.io/noleu/event_calendar_frontend
+          image: ghcr.io/noleu/event_calendar_frontend
           env:
             - name: NODE_ENV
               valueFrom:
