--- a/k8s/myeventsappchart/templates/ingress.yaml
+++ b/k8s/myeventsappchart/templates/ingress.yaml
@@ -5,9 +5,9 @@ metadata:
   labels:
   {{- include "myapp.labels" . | nindent 4 }}
   annotations:
-    cert-manager.io/cluster-issuer: letsencrypt
+    cert-manager.io/issuer: ca-issuer
 spec:
-  ingressClassName: public
+  ingressClassName: nginx
   rules:
   - host: myeventsapp.com
     http:
@@ -22,4 +22,5 @@ spec:
   tls:
   - hosts:
     - myeventsapp.com
-    secretName: myingress-cert
+    secretName: my-ca-signed-cert-secret
+    
