--- a/k8s/myeventsappchart/templates/my-ca-signed-cert.yaml
+++ b/k8s/myeventsappchart/templates/my-ca-signed-cert.yaml
@@ -7,6 +7,16 @@ spec:
   secretName: my-ca-signed-cert-secret
   dnsNames:
     - myeventsapp.com
+  commonName: "myeventsapp.com"
   issuerRef:
     name: ca-issuer
     kind: Issuer
+  subject:
+    countries: 
+      - "Netherlands"
+    localities:
+      - "Amsterdam"
+    organizations:
+      - "VU"
+    organizationalUnits:
+      - "CS"
